--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
   <body>
     <div3>Penoyar Law Offices</div3>
     <div2>Serving Pacific, Grays Harbor, and Wahkiakum Counties since 1974</div2>
-    <div1>(360) 875-5321
-      504 West Robert Bush Drive, South Bend, WA</div1>
+    <div1>
+      <p>(360) 875-5321</p>
+      <p>504 West Robert Bush Drive, South Bend, WA</p>
+      </div1>
   </body>
 </html>
